--- a/index.html
+++ b/index.html
@@ -18,17 +18,52 @@
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      position: relative;
     }
     header h1 {
       margin: 0;
       font-size: 1.6rem;
       color: #5d3a00;
     }
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .menu-toggle span {
+      width: 25px;
+      height: 3px;
+      background-color: #5d3a00;
+      margin: 4px 0;
+      transition: 0.4s;
+    }
+    nav {
+      display: flex;
+      gap: 1.2rem;
+    }
     nav a {
-      margin-left: 1.2rem;
       text-decoration: none;
       color: #5d3a00;
       font-weight: bold;
+    }
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: flex;
+      }
+      nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
+        padding: 1rem 2rem;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      }
+      nav.active {
+        display: flex;
+      }
     }
     .hero {
       background-image: url('hero.jpg');
@@ -103,7 +138,12 @@
 <body>
 
 <header>
-  <h1>莫內花園民宿</h1>
+  <h1>花蓮莫內花園民宿</h1>
+  <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
   <nav>
     <a href="#">關於我們</a>
     <a href="#">房型介紹</a>
@@ -171,7 +211,7 @@
 </section>
 
 <footer>
-  地址：花蓮縣壽豐鄉麗湖路123號｜電話：03-1234567｜© 2025 莫內花園民宿
+  地址：花蓮縣壽豐鄉麗湖路123號｜電話：03-1234567｜© 2025 花蓮莫內花園民宿
 </footer>
 
 </body>
