--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
     }
     .section {
       padding: 3rem 2rem;
-      max-width: 1100px;
       margin: auto;
     }
     .section h3 {
@@ -100,6 +99,7 @@
       -webkit-overflow-scrolling: touch;
       gap: 1.5rem;
       padding-bottom: 1rem;
+      width: 100%;
     }
     .slider::-webkit-scrollbar {
       display: none;
@@ -182,7 +182,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1559599238-21f2c2134a47" alt="房型3" />
+      <img src="https://images.unsplash.com/photo-1600585153755-c152b2f99e3b" alt="房型3" />
       <div class="card-content">
         <h4>單人書房</h4>
         <p>NT$1,800／晚，適合獨旅，附閱讀空間。</p>
