--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      position: relative;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+    body {
+      padding-top: 80px;
     }
     header h1 {
       margin: 0;
@@ -92,6 +98,9 @@
       border-left: 4px solid #92a98c;
       padding-left: 0.8rem;
     }
+    .slider-wrapper {
+      position: relative;
+    }
     .slider {
       display: flex;
       overflow-x: auto;
@@ -102,7 +111,11 @@
       width: 100%;
     }
     .slider::-webkit-scrollbar {
-      display: none;
+      height: 8px;
+    }
+    .slider::-webkit-scrollbar-thumb {
+      background-color: #ccc;
+      border-radius: 4px;
     }
     .card {
       flex: 0 0 auto;
@@ -166,40 +179,42 @@
 
 <section class="section">
   <h3>🏠 房型介紹（可預約）</h3>
-  <div class="slider">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf" alt="房型1" />
-      <div class="card-content">
-        <h4>花園雙人房</h4>
-        <p>NT$2,800／晚，含早餐，落地窗景觀。</p>
+  <div class="slider-wrapper">
+    <div class="slider">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1600585153944-9569f6466ae1?auto=format&fit=crop&w=800&q=80" alt="房型1" />
+        <div class="card-content">
+          <h4>花園雙人房</h4>
+          <p>NT$2,800／晚，含早餐，落地窗景觀。</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="房型2" />
-      <div class="card-content">
-        <h4>森林四人房</h4>
-        <p>NT$3,800／晚，適合家庭旅遊，附浴缸。</p>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1600585152638-7441733eb7aa?auto=format&fit=crop&w=800&q=80" alt="房型2" />
+        <div class="card-content">
+          <h4>森林四人房</h4>
+          <p>NT$3,800／晚，適合家庭旅遊，附浴缸。</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1600585153755-c152b2f99e3b" alt="房型3" />
-      <div class="card-content">
-        <h4>單人書房</h4>
-        <p>NT$1,800／晚，適合獨旅，附閱讀空間。</p>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1595526114035-16a1c361ab17?auto=format&fit=crop&w=800&q=80" alt="房型3" />
+        <div class="card-content">
+          <h4>單人書房</h4>
+          <p>NT$1,800／晚，適合獨旅，附閱讀空間。</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2" alt="房型4" />
-      <div class="card-content">
-        <h4>花園陽台套房</h4>
-        <p>NT$3,200／晚，附戶外陽台與泡茶區。</p>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1595521931345-83b9072d1f3a?auto=format&fit=crop&w=800&q=80" alt="房型4" />
+        <div class="card-content">
+          <h4>花園陽台套房</h4>
+          <p>NT$3,200／晚，附戶外陽台與泡茶區。</p>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1586105251261-72a756497a12" alt="房型5" />
-      <div class="card-content">
-        <h4>景觀閣樓房</h4>
-        <p>NT$3,500／晚，樓中樓設計，景觀視野佳。</p>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1588854337221-c15235b8fcb0?auto=format&fit=crop&w=800&q=80" alt="房型5" />
+        <div class="card-content">
+          <h4>景觀閣樓房</h4>
+          <p>NT$3,500／晚，樓中樓設計，景觀視野佳。</p>
+        </div>
       </div>
     </div>
   </div>
@@ -209,21 +224,21 @@
   <h3>☕ 咖啡選單（現場供應）</h3>
   <div class="grid">
     <div class="card">
-      <img src="https://source.unsplash.com/400x300/?coffee" alt="咖啡1" />
+      <img src="https://images.unsplash.com/photo-1605478371534-8e3e4f5f8d53?auto=format&fit=crop&w=600&q=80" alt="咖啡1" />
       <div class="card-content">
         <h4>莫內手沖</h4>
         <p>NT$150／杯，精選花蓮在地豆，淡雅果香。</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://source.unsplash.com/400x300/?latte" alt="咖啡2" />
+      <img src="https://images.unsplash.com/photo-1587049352846-4b36b1b36724?auto=format&fit=crop&w=600&q=80" alt="玫瑰拿鐵" />
       <div class="card-content">
         <h4>玫瑰拿鐵</h4>
         <p>NT$160／杯，融合玫瑰花露與濃郁奶香。</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://source.unsplash.com/400x300/?espresso" alt="咖啡3" />
+      <img src="https://images.unsplash.com/photo-1536520002442-39764a41eae1?auto=format&fit=crop&w=600&q=80" alt="莊園濃縮" />
       <div class="card-content">
         <h4>莊園濃縮</h4>
         <p>NT$120／杯，重烘焙風味，尾韻厚實。</p>
