--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       font-family: 'Noto Serif TC', serif;
       background-color: #f9f5f0;
       color: #3e3e3e;
+      padding-top: 80px;
     }
     header {
       background-color: #fff;
@@ -22,9 +23,6 @@
       top: 0;
       width: 100%;
       z-index: 1000;
-    }
-    body {
-      padding-top: 80px;
     }
     header h1 {
       margin: 0;
@@ -147,6 +145,11 @@
       font-size: 0.9rem;
       color: #666;
     }
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+    }
     footer {
       text-align: center;
       padding: 2rem;
@@ -160,7 +163,7 @@
 
 <header>
   <h1>莫內花園民宿</h1>
-  <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
+  <div class="menu-toggle">
     <span></span>
     <span></span>
     <span></span>
@@ -182,35 +185,35 @@
   <div class="slider-wrapper">
     <div class="slider">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1600585153944-9569f6466ae1?auto=format&fit=crop&w=800&q=80" alt="房型1" />
+        <img src="https://images.unsplash.com/photo-1600585153944-9569f6466ae1" alt="房型1" />
         <div class="card-content">
           <h4>花園雙人房</h4>
           <p>NT$2,800／晚，含早餐，落地窗景觀。</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1600585152638-7441733eb7aa?auto=format&fit=crop&w=800&q=80" alt="房型2" />
+        <img src="https://images.unsplash.com/photo-1600585152638-7441733eb7aa" alt="房型2" />
         <div class="card-content">
           <h4>森林四人房</h4>
           <p>NT$3,800／晚，適合家庭旅遊，附浴缸。</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1595526114035-16a1c361ab17?auto=format&fit=crop&w=800&q=80" alt="房型3" />
+        <img src="https://images.unsplash.com/photo-1595526114035-16a1c361ab17" alt="房型3" />
         <div class="card-content">
           <h4>單人書房</h4>
           <p>NT$1,800／晚，適合獨旅，附閱讀空間。</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1595521931345-83b9072d1f3a?auto=format&fit=crop&w=800&q=80" alt="房型4" />
+        <img src="https://images.unsplash.com/photo-1595521931345-83b9072d1f3a" alt="房型4" />
         <div class="card-content">
           <h4>花園陽台套房</h4>
           <p>NT$3,200／晚，附戶外陽台與泡茶區。</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1588854337221-c15235b8fcb0?auto=format&fit=crop&w=800&q=80" alt="房型5" />
+        <img src="https://images.unsplash.com/photo-1588854337221-c15235b8fcb0" alt="房型5" />
         <div class="card-content">
           <h4>景觀閣樓房</h4>
           <p>NT$3,500／晚，樓中樓設計，景觀視野佳。</p>
@@ -224,21 +227,21 @@
   <h3>☕ 咖啡選單（現場供應）</h3>
   <div class="grid">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1605478371534-8e3e4f5f8d53?auto=format&fit=crop&w=600&q=80" alt="咖啡1" />
+      <img src="https://images.unsplash.com/photo-1605478371534-8e3e4f5f8d53" alt="咖啡1" />
       <div class="card-content">
         <h4>莫內手沖</h4>
         <p>NT$150／杯，精選花蓮在地豆，淡雅果香。</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1587049352846-4b36b1b36724?auto=format&fit=crop&w=600&q=80" alt="玫瑰拿鐵" />
+      <img src="https://images.unsplash.com/photo-1587049352846-4b36b1b36724" alt="玫瑰拿鐵" />
       <div class="card-content">
         <h4>玫瑰拿鐵</h4>
         <p>NT$160／杯，融合玫瑰花露與濃郁奶香。</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1536520002442-39764a41eae1?auto=format&fit=crop&w=600&q=80" alt="莊園濃縮" />
+      <img src="https://images.unsplash.com/photo-1536520002442-39764a41eae1" alt="莊園濃縮" />
       <div class="card-content">
         <h4>莊園濃縮</h4>
         <p>NT$120／杯，重烘焙風味，尾韻厚實。</p>
@@ -250,6 +253,14 @@
 <footer>
   地址：花蓮縣壽豐鄉麗湖路123號｜電話：03-1234567｜© 2025 莫內花園民宿
 </footer>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const toggle = document.querySelector('.menu-toggle');
+    const nav = document.querySelector('nav');
+    toggle.addEventListener('click', () => nav.classList.toggle('active'));
+  });
+</script>
 
 </body>
 </html>
