--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       right: 0;
       width: 100%;
       z-index: 1000;
-      flex-wrap: wrap;
     }
     header h1 {
       margin: 0;
@@ -47,7 +46,6 @@
     }
     nav {
       display: flex;
-      flex-wrap: wrap;
       gap: 1.2rem;
       margin-left: auto;
     }
@@ -170,7 +168,7 @@
 
 <header>
   <h1>莫內花園民宿</h1>
-  <div class="menu-toggle">
+  <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
     <span></span>
     <span></span>
     <span></span>
@@ -260,14 +258,6 @@
 <footer>
   地址：花蓮縣壽豐鄉麗湖路123號｜電話：03-1234567｜© 2025 莫內花園民宿
 </footer>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const toggle = document.querySelector('.menu-toggle');
-    const nav = document.querySelector('nav');
-    toggle.addEventListener('click', () => nav.classList.toggle('active'));
-  });
-</script>
 
 </body>
 </html>
