--- a/index.html
+++ b/index.html
@@ -163,101 +163,12 @@
       font-size: 0.9rem;
     }
   </style>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const toggle = document.querySelector('.menu-toggle');
+      const nav = document.querySelector('nav');
+      toggle.addEventListener('click', () => nav.classList.toggle('active'));
+    });
+  </script>
 </head>
 <body>
-
-<header>
-  <h1>莫內花園民宿</h1>
-  <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <nav>
-    <a href="#">關於我們</a>
-    <a href="#">房型介紹</a>
-    <a href="#">咖啡選單</a>
-    <a href="#">聯絡方式</a>
-  </nav>
-</header>
-
-<div class="hero">
-  <h2>遠離城市，走進花園</h2>
-</div>
-
-<section class="section">
-  <h3>🏠 房型介紹（可預約）</h3>
-  <div class="slider-wrapper">
-    <div class="slider">
-      <div class="card">
-        <img src="room1.jpg" alt="房型1" />
-        <div class="card-content">
-          <h4>花園雙人房</h4>
-          <p>NT$2,800／晚，含早餐，落地窗景觀。</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="room2.jpg" alt="房型2" />
-        <div class="card-content">
-          <h4>森林四人房</h4>
-          <p>NT$3,800／晚，適合家庭旅遊，附浴缸。</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="room3.jpg" alt="房型3" />
-        <div class="card-content">
-          <h4>單人書房</h4>
-          <p>NT$1,800／晚，適合獨旅，附閱讀空間。</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="room4.jpg" alt="房型4" />
-        <div class="card-content">
-          <h4>花園陽台套房</h4>
-          <p>NT$3,200／晚，附戶外陽台與泡茶區。</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="room5.jpg" alt="房型5" />
-        <div class="card-content">
-          <h4>景觀閣樓房</h4>
-          <p>NT$3,500／晚，樓中樓設計，景觀視野佳。</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <h3>☕ 咖啡選單（現場供應）</h3>
-  <div class="grid">
-    <div class="card">
-      <img src="cofe1.jpg" alt="咖啡1" />
-      <div class="card-content">
-        <h4>莫內手沖</h4>
-        <p>NT$150／杯，精選花蓮在地豆，淡雅果香。</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="cofe2.jpg" alt="玫瑰拿鐵" />
-      <div class="card-content">
-        <h4>玫瑰拿鐵</h4>
-        <p>NT$160／杯，融合玫瑰花露與濃郁奶香。</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="cofe3.jpg" alt="莊園濃縮" />
-      <div class="card-content">
-        <h4>莊園濃縮</h4>
-        <p>NT$120／杯，重烘焙風味，尾韻厚實。</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer>
-  地址：花蓮縣壽豐鄉麗湖路123號｜電話：03-1234567｜© 2025 莫內花園民宿
-</footer>
-
-</body>
-</html>
