--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
       justify-content: center;
       text-align: center;
     }
+    @media (max-width: 768px) {
+      .hero {
+        height: 40vh;
+      }
+    }
     .hero h2 {
       background: rgba(255, 255, 255, 0.7);
       padding: 1rem 2rem;
