--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       display: none;
       flex-direction: column;
       cursor: pointer;
+      z-index: 999;
     }
     .menu-toggle span {
       width: 25px;
@@ -169,7 +170,7 @@
       color: #555;
       font-size: 0.9rem;
     }
-</style>
+  </style>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const toggle = document.querySelector('.menu-toggle');
