--- a/index.html
+++ b/index.html
@@ -34,23 +34,17 @@
       white-space: nowrap;
     }
     .menu-toggle {
-    display: none; /* 預設隱藏 */
-    flex-direction: column;
-    cursor: pointer;
-    padding: 10px; /* 增加點擊區域 */
-    background: transparent;
-    border: none;
-    z-index: 1001; /* 確保在最上層 */
-}
-.menu-toggle span {
-    width: 25px;
-    height: 3px;
-    background-color: #5d3a00;
-    margin: 4px 0;
-    transition: 0.4s;
-    display: block; /* 確保 span 正確顯示 */
-    border-radius: 3px; /* 讓線條更圓潤 */
-}
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .menu-toggle span {
+      width: 25px;
+      height: 3px;
+      background-color: #5d3a00;
+      margin: 4px 0;
+      transition: 0.4s;
+    }
     nav {
       display: flex;
       flex-wrap: wrap;
