--- a/index.html
+++ b/index.html
@@ -57,25 +57,29 @@
       font-weight: bold;
       white-space: nowrap;
     }
-    @media (max-width: 768px) {
-      .menu-toggle {
-        display: flex;
-      }
-      nav {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 70px;
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        padding: 1rem 2rem;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      }
-      nav.active {
-        display: flex;
-      }
-    }
+    
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: flex;
+  }
+  nav {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background-color: #fff;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-sizing: border-box;
+    z-index: 999;
+  }
+  nav.active {
+    display: flex;
+  }
+}
     .hero {
       background-image: url('hero.jpg');
       background-size: cover;
